# phishGNN

./: .gitignore  INSTALLATION.md  README.md  dataset_filter.py  install_dataset.sh  requirements.txt  visualization.html
.devcontainer/: Dockerfile  devcontainer.json
crawler/: Cargo.toml  input.txt
crawler/src/: main.rs  utils.rs
crawler/src/workers/: browser.rs  common.rs  core.rs  domain.rs  mod.rs
crawler/test/: .gitattributes  .gitignore
crawler/test/testdata.sled/: db
data/: phishtank_dataset_merged.csv
mqtt/: README.md
mqtt/MQTTserver/: Makefile  README.md  clientTester  clientTester.c  server  server.c
mqtt/extension/: background.js  manifest.json  stop.html  style.css  warning.js
mqtt/http_server/: README.md  main.py
mqtt/jsMQTT/: background.js  manifest.json  stop.html  warning.js
mqtt/phising_website_grapper/: Makefile  README.md  dico  dico.c  grap_link.py  history.txt  phising_site.txt
phishGNN/: cross_validation.py  dataprep.py  dataset.py  dataset_v1.py  dataset_v2.py  dataset_v3.py  loader.py  main.py  model.py  notebook.ipynb  other_models.py  predict.py  test_dataset.py  training.py  utils.py  visualization.py
phishGNN/models/: __init__.py  cluster_gcn.py  ffn.py  gat.py  gcn.py  gin.py  graphsage.py  mem_pool.py  mlp.py
phishGNN/utils/: compute_device.py  dataset_filter.py  fix_https.py  utils.py
scripts/: clean_pyc_files.sh
tests/: test_dataset.py
visualization/: visualization.html
weights/10_epochs_default/: ClusterGCN_global_add_pool_16.pkl  ClusterGCN_global_add_pool_32.pkl  ClusterGCN_global_add_pool_64.pkl  (+61 more)
(+67 files in other folders)
