[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
addr = "0.15"
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.1", features = ["derive"] }
csv = "1.1"
deadpool = "0.9"
encoding_rs = "0.8"
futures = "0.3"
mime = "0.3"
mongodb = "2.1"
once_cell = "1.10"
reqwest = "0.11"
scraper = "0.12"
serde_json = "1.0"
thirtyfour = "0.28"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.23"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.2"
unicode-segmentation = "1.9"
url = "2.2"
x509-parser = "0.13"
webpki-roots = "0.22"
whois-rust = { version = "1.5", features = ["tokio"] }

[dev-dependencies]
sled = "0.34"
